test/libhyperion/syntaxTests/denominations/invalid_denomination_on_string.hyp
contract C {
	string s = "abc" quanta;
}
// ----
// ParserError 2314: (31-37): Expected ';' but got 'quanta'
